# ragflow

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  genindex.html  objects.inv  pyproject.toml  pytest.ini  quick_start.html  searchindex.js
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: docs.yml  test.yml
_modules/ragflow/adapters/llms/: gemini_adapter.html
_modules/ragflow/adapters/retrieval_strategies/: simple_similarity_retriever.html
_modules/ragflow/adapters/vector_stores/: chromadb_adapter.html
_modules/ragflow/core/: errors.html  interfaces.html  pipeline.html
_modules/ragflow/pipelines/: default_rag_pipeline.html
_modules/ragflow/utils/: helpers.html
_sources/: installation.rst.txt  quick_start.rst.txt
_sources/advanced/: custom_adapters.rst.txt  performance_tuning.rst.txt
_sources/tutorials/: document_loading.rst.txt
_sources/user_guide/: customization.rst.txt
advanced/: custom_adapters.html  performance_tuning.html
api/: adapters.html  pipelines.html  utils.html
docs/: README.md
docs/source/: concepts.rst  conf.py  index.rst  installation.rst
docs/source/advanced/: performance_tuning.rst
docs/source/api/: adapters.rst  core.rst  pipelines.rst  utils.rst
docs/source/tutorials/: basic_rag.rst
latest/: concepts.html  index.html  installation.html  py-modindex.html  search.html
latest/_modules/: index.html
latest/_modules/ragflow/adapters/chunking_strategies/: recursive_character_splitter_adapter.html
latest/_modules/ragflow/adapters/embedding_models/: sentence_transformers_adapter.html
latest/_sources/: index.rst.txt
latest/_sources/api/: adapters.rst.txt  pipelines.rst.txt
latest/api/: core.html
latest/tutorials/: basic_rag.html
latest/user_guide/: customization.html
ragflow/: __init__.py
ragflow/adapters/: __init__.py
ragflow/adapters/chunking_strategies/: __init__.py  recursive_character_splitter_adapter.py
ragflow/adapters/embedding_models/: __init__.py  sentence_transformers_adapter.py
ragflow/adapters/llms/: __init__.py  gemini_adapter.py
ragflow/adapters/retrieval_strategies/: __init__.py  simple_similarity_retriever.py
ragflow/adapters/vector_stores/: __init__.py  chromadb_adapter.py
ragflow/core/: README.md  __init__.py  architecture.txt  errors.py  interfaces.py  pipeline.py
ragflow/docs/: api_design_principles.md  code_quality_guide.md  custom_adapters_guide.md  customization_guide.md
ragflow/examples/: configuration_examples.py  custom_adapters_example.py  customization_examples.py  quickstart.py
ragflow/pipelines/: __init__.py  default_rag_pipeline.py
ragflow/utils/: README.md  __init__.py  configuration_guide.md  helpers.py
tests/: __init__.py  conftest.py  db_patch.py
tests/adapters/embedding_models/: __init__.py  test_sentence_transformers_adapter.py
tests/adapters/vector_stores/: __init__.py  test_chromadb_adapter.py
tests/core/: __init__.py  test_agentic_rag_pipeline.py  test_agentic_rag_pipeline_unit.py
tests/pipelines/: test_default_rag_pipeline.py
tutorials/: document_loading.html
