[tool.ruff]
line-length = 88
target-version = "py38"
src = ["ragflow"]
exclude = [".git", ".venv", "__pycache__", ".mypy_cache"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ERA",  # eradicate
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "D",    # pydocstyle
    "S",    # flake8-bandit
]
ignore = [
    "D203",  # one-blank-line-before-class
    "D212",  # multi-line-summary-first-line
    "E501",  # line-too-long (handled by formatter)
    "B904",  # use raise from
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "D"]
"examples/*" = ["D", "E501", "ERA001"]
"**/examples/*.py" = ["D", "E501", "ERA001"]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]

[tool.poetry]
name = "ragflow"
version = "0.1.0"
description = "A high-level framework for Retrieval Augmented Generation"
authors = ["RAGFlow Team <team@example.com>"]  # Added a placeholder email
readme = "README.md"
license = "MIT"  # Assuming MIT based on typical open-source projects
packages = [{include = "ragflow"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

# Main dependencies will be added here using 'poetry add'
langchain = "^0.3.25"
sentence-transformers = "^4.1.0"
pysqlite3-binary = "^0.5.4"
google-genai = "^1.14.0"
chromadb = "^1.0.8"

[tool.poetry.group.dev.dependencies]
# Dev dependencies will be added here
pre-commit = "^3.3.3"
ruff = "^0.0.282"
bandit = "^1.7.5"

[tool.poetry.group.test.dependencies]
# Test dependencies will be added here
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs.dependencies]
# Docs dependencies will be added here
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
